# ScaleStorm

./: .gitignore  LICENSE  README.md  doc.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: gitleak.yaml  sca.yaml  scan-docker.yml  security.yml
api/: Cargo.toml  Dockerfile  README.md
api/src/: handlers.rs  main.rs  routes.rs  utils.rs
backend/: Dockerfile  package.json
backend/src/: app.module.ts
backend/src/modules/autoscale/: autoscale.controller.ts  autoscale.module.ts  autoscale.service.ts
backend/src/modules/load/: load.controller.ts  load.gateway.ts  load.module.ts  load.service.ts
backend/src/modules/replicas/: replicas.controller.ts  replicas.module.ts  replicas.service.ts
front/: .dockerignore  Dockerfile  README.md  components.json  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
front/src/app/: layout.tsx  page.tsx
front/src/components/: pods-module.tsx  pods-settings.tsx  pods-view.tsx  requests-module.tsx
front/src/components/ui/: badge.tsx  chart.tsx  select.tsx  skeleton.tsx
front/src/hooks/: useWebSocket.ts
front/src/lib/: api.ts  config.ts
front/src/providers/: QueryClientProvider.tsx
front/src/types/: autoscale.ts  pod.ts
scan/: cargo_audit.json  cargo_geiger.json  docker_api.json  docker_front.json  gitleak.json  pnpm_audit.json  snyk_api_code.json  snyk_front_code.json  snyk_front_libs.json
