[package]
name = "scalestorm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
rand = "0.9.0"
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["v1_28"] }
regex = "1.5"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
